# project

pa_stitching/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pa_stitching/include/: Calibration.h  Configure.h  ImageDeal.h  gloabal_value.h  segnet.h  td.h~
pa_stitching/src/: CMakeLists.txt  ImageDeal.cpp  Muti_cpu.cpp  cross_static.cpp~  main.back.cpp  main.cpp  segnet.cpp  segnet.cpp~  segnet_exp.cpp~  td.cpp~  td.h~  test_macher _1.cpp  test_macher.cpp
